--- a/views/chat.jade
+++ b/views/chat.jade
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+html.
   <head>
     <title>Socket.IO chat</title>
     <style>
@@ -32,4 +32,3 @@
       });
     </script>
   </body>
-</html>
